src/main/java/com/song/antlr/test/libexpr/LibExpr.g4
grammar LibExpr;
import CommonLexerRules;

prog: stat+;

stat: expr NEWLINE
    | ID '=' expr NEWLINE
    | NEWLINE
    ;

expr: expr ('*'|'/') expr
    | expr ('+'|'-') expr
    | INT
    | ID
    | '(' expr ')'
    ;

